--- a/example.html
+++ b/example.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link type="text/css" rel="stylesheet" href="https://vjs.zencdn.net/7.11.4/video-js.css" />
-</head>
-<body>
-  <video
-    class="video-js vjs-default-skin vjs-big-play-centered"
-    controls
-    width="640" height="360"
-    data-setup='{ "techOrder": ["Vimeo"], "sources": [{ "type": "video/vimeo", "src": "326701979"}], "vimeo": { "autoplay": false } }'
-  >
-  </video>
+  <head>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://vjs.zencdn.net/7.11.4/video-js.css"
+    />
+  </head>
+  <body>
+    <video
+      class="video-js vjs-default-skin vjs-big-play-centered"
+      controls
+      width="640"
+      height="360"
+      data-setup='{ "techOrder": ["Vimeo"], "sources": [{ "type": "video/vimeo", "src": "326701979"}], "vimeo": { "autoplay": false, "muted": false } }'
+    ></video>
 
-  <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
-  <script src="dist/Vimeo.min.js"></script>
-</body>
+    <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+    <script src="dist/Vimeo.min.js"></script>
+  </body>
 </html>
